force-app/main/default/objects/EdPlusUser__x.object
<CustomObject>
    <description>EdPlus Users (Cross Org Initiative)</description>
    <externalDataSource>EdPlusCrossOrg</externalDataSource>
    <externalName>User</externalName>
    <fields>
        <fullName>Account_Id_edpl__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias_edpl__c</fullName>
        <externalDeveloperName>Alias</externalDeveloperName>
        <label>Alias</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Nickname_edpl__c</fullName>
        <externalDeveloperName>CommunityNickname</externalDeveloperName>
        <label>Nickname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_edpl__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_edpl__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_edpl__c</fullName>
        <externalDeveloperName>Division</externalDeveloperName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_edpl__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Number_edpl__c</fullName>
        <externalDeveloperName>EmployeeNumber</externalDeveloperName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FERPA_Trained_edpl__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>FERPA_Trained__c</externalDeveloperName>
        <label>FERPA Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Federation_Identifier_edpl__c</fullName>
        <externalDeveloperName>FederationIdentifier</externalDeveloperName>
        <label>SAML Federation ID</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name_edpl__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_edpl__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date_edpl__c</fullName>
        <externalDeveloperName>LastLoginDate</externalDeveloperName>
        <label>Last Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name_edpl__c</fullName>
        <externalDeveloperName>LastName</externalDeveloperName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_edpl__c</fullName>
        <externalDeveloperName>MiddleName</externalDeveloperName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_edpl__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Full Name</label>
        <length>121</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suffix_edpl__c</fullName>
        <externalDeveloperName>Suffix</externalDeveloperName>
        <label>Suffix</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_edpl__c</fullName>
        <externalDeveloperName>Title</externalDeveloperName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type_edpl__c</fullName>
        <externalDeveloperName>UserType</externalDeveloperName>
        <label>User Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username_edpl__c</fullName>
        <externalDeveloperName>Username</externalDeveloperName>
        <label>Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_digit_User_ID_edpl__c</fullName>
        <externalDeveloperName>X18_digit_User_ID__c</externalDeveloperName>
        <label>18-digit User ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <label>User (EdPlus)</label>
    <pluralLabel>Users (EdPlus)</pluralLabel>
</CustomObject>